--- a/Desafio/package.json
+++ b/Desafio/package.json
@@ -10,8 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "5.10.0",
+    "@react-navigation/material-top-tabs": "5.3.0",
+    "@react-navigation/native": "5.8.0",
+    "@react-navigation/stack": "5.10.0",
+    "navigation": "5.3.1",
+    "navigation-react": "4.1.1",
+    "navigation-react-native": "7.0.1",
     "react": "16.13.1",
-    "react-native": "0.63.3"
+    "react-native": "0.63.3",
+    "react-native-gesture-handler": "1.8.0",
+    "react-native-reanimated": "1.13.1",
+    "react-native-safe-area-context": "3.1.8",
+    "react-native-screens": "2.11.0",
+    "react-native-tab-view": "2.15.2"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
