--- a/Desafio/package.json
+++ b/Desafio/package.json
@@ -24,7 +24,8 @@
     "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.8",
     "react-native-screens": "2.11.0",
-    "react-native-tab-view": "2.15.2"
+    "react-native-tab-view": "2.15.2",
+    "styled-components": "5.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
